--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -31,7 +31,7 @@ jobs:
         name: Build and push
         uses: docker/build-push-action@v4
         with:
-          build-args: |
+          labels: |
             email=ron@upmyjob.com
             commit=${{ steps.create_short_sha.outputs.shortsha }}
           push: true
