--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -6,8 +6,6 @@ on:
 jobs:
   docker:
     runs-on: ubuntu-latest
-    outputs:
-      commit: ${{ steps.create_short_sha.outputs.shortsha }}
     # create short commit SHA hash to label image with
     steps:
       - name: create short SHA
@@ -15,7 +13,7 @@ jobs:
         run: |
           long=$GITHUB_SHA
           short=${long:0:6}
-          echo "shortsha=$short" >> $GITHUB_OUTPUT
+          echo "shortsha=$short" >> $GITHUB_ENV
 
       -
         name: Set up QEMU
@@ -35,6 +33,6 @@ jobs:
         with:
           labels: |
             email=ron@upmyjob.com
-            commit=${{ outputs.commit }}
+            commit=${{ env.shortsha }}
           push: true
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/nodejs:latest
